Including getScore in Creature